correcion de tamaños

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="card">
               <img src="./assets/img/citycar1.jpg" class="card-img-top" alt="...">
               <div class="card-body"><h4>Toyota i-Road</h4>
-                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano. Tiene una autonomía de 50 kilómetros con una velocidad máxima de 45 km/h y no produce emisiones en el punto de uso.</p>
+                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano.</p>
                 <div class="contenedor">
                    <botton class="btn-personal">Más Información</botton>
                 </div>
@@ -60,7 +60,7 @@
           <div class="card">
               <img src="./assets/img/citycar2.jpg" class="card-img-top" alt="...">
               <div class="card-body"><h4>Toyota i-Road</h4>
-                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano. Tiene una autonomía de 50 kilómetros con una velocidad máxima de 45 km/h y no produce emisiones en el punto de uso.</p>
+                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano.</p>
                 <div class="contenedor">
                    <botton class="btn-personal">Más Información</botton>
                 </div>
@@ -71,7 +71,7 @@
           <div class="card">
               <img src="./assets/img/citycar3.jpg" class="card-img-top" alt="...">
               <div class="card-body"><h4>Toyota i-Road</h4>
-                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano. Tiene una autonomía de 50 kilómetros con una velocidad máxima de 45 km/h y no produce emisiones en el punto de uso.</p>
+                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano. </p>
                 <div class="contenedor">
                    <botton class="btn-personal">Más Información</botton>
                 </div>
@@ -82,7 +82,7 @@
           <div class="card">
               <img src="./assets/img/citycar4.jpg" class="card-img-top" alt="...">
               <div class="card-body"><h4>Toyota i-Road</h4>
-                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano. Tiene una autonomía de 50 kilómetros con una velocidad máxima de 45 km/h y no produce emisiones en el punto de uso.</p>
+                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano.</p>
                 <div class="contenedor">
                    <botton class="btn-personal">Más Información</botton>
                 </div>
@@ -92,7 +92,7 @@
           <div class="card">
               <img src="./assets/img/citycar5.jpg" class="card-img-top" alt="...">
               <div class="card-body"><h4>Toyota i-Road</h4>
-                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano. Tiene una autonomía de 50 kilómetros con una velocidad máxima de 45 km/h y no produce emisiones en el punto de uso.</p>
+                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano.</p>
                 <div class="contenedor">
                    <botton class="btn-personal">Más Información</botton>
                 </div>
@@ -103,7 +103,7 @@
           <div class="card">
               <img src="./assets/img/citycar6.jpg" class="card-img-top" alt="...">
               <div class="card-body"><h4>Toyota i-Road</h4>
-                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano. Tiene una autonomía de 50 kilómetros con una velocidad máxima de 45 km/h y no produce emisiones en el punto de uso.</p>
+                <p class="card-text">El Toyota i-Road es un vehículo eléctrico biplaza en forma de triciclo, diseñado para uso urbano.</p>
                 <div class="contenedor">
                    <botton class="btn-personal">Más Información</botton>
                 </div>
